
<!-- Copyright (c) 2015. Seagate Technology PLC. All rights reserved. -->

<resources>
    <string name="app_name">Lyve Photos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="item_title">Bill Murray</string>
    <string name="detail_desc">Bill, the fifth of nine children, was born in Wilmette, Illinois, to Lucille (Collins), a mailroom clerk, and Edward Joseph Murray II, who sold lumber. He is of Irish descent. Among his siblings are actors Brian Doyle-Murray, Joel Murray, and John Murray. He and most of his siblings worked as caddies, which paid his tuition to Loyola Academy, a Jesuit school. He played sports and did some acting while in that school, but in his words, mostly "screwed off." He enrolled at Regis College in Denver to study pre-med but dropped out after being arrested for marijuana possession. He then joined the National Lampoon Radio Hour with fellow members Dan Aykroyd, Gilda Radner, and John Belushi. However, while those three became the original members of Saturday Night Live (1975), he joined Saturday Night Live with Howard Cosell (1975), which premiered that same year. After that show failed, he later got the opportunity to join Saturday Night Live (1975). </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>
    <string name="item_desc">William James "Bill" Murray (born September 21, 1950) is an American actor and comedian. He first gained exposure on Saturday Night Live.
    </string>

    <string name="digest_title">Digest</string>
    <string name="tags_title">Tags</string>
    <string name="just_added_title">Just Added</string>
    <string name="favorites_title">Favorites</string>
    <string name="photos_title">Photos</string>
    <string name="videos_title">Videos</string>
    <string name="byline">by Seagate</string>
    <string name="sign_in">Sign In</string>
    <string name="password_hint">password</string>
    <string name="username_hint">Account ID</string>

</resources>
