<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (c) 2015. Seagate Technology PLC. All rights reserved. -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/digest" android:icon="@android:drawable/ic_menu_week"
              android:title="@string/digest_title" />
        <item android:id="@+id/tags" android:icon="@android:drawable/ic_menu_day"
              android:title="@string/tags_title" />
        <item android:id="@+id/just_added" android:icon="@android:drawable/ic_menu_slideshow"
              android:title="@string/just_added_title" />
        <item android:id="@+id/favorites" android:icon="@android:drawable/ic_menu_week"
              android:title="@string/favorites_title" />
        <item android:id="@+id/photos" android:icon="@android:drawable/ic_menu_day"
              android:title="@string/photos_title" />
        <item android:id="@+id/videos" android:icon="@android:drawable/ic_menu_slideshow"
              android:title="@string/videos_title" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>