<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (c) 2015. Seagate Technology PLC. All rights reserved. -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    >

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginBottom="100sp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:src="@drawable/cloud"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="30sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/byline"
                android:textSize="24sp"
                />
        </LinearLayout>
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:background="@android:color/white"
        android:visibility="gone"
        >
        <!-- TextView

         android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:text="Lyve Could BS&#8482;"
            android:textSize="30sp"
            android:layout_marginTop="40sp"
            android:layout_marginBottom="40sp"

         android:layout_alignParentTop="true"
        / -->
        <TextView
            android:id="@+id/username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text=""
            android:textSize="24sp"
            />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_label"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30sp"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp"
            style="?android:attr/editTextStyle"
            android:gravity="center_horizontal"
            android:hint="@string/username_hint"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="#cccccc"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text=""
            android:textSize="24sp"
            />

        <EditText
            android:id="@+id/account_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40sp"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp"
            style="?android:attr/editTextStyle"
            android:gravity="center_horizontal"
            android:hint="@string/password_hint"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:password="true"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="#cccccc"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/account_password"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp"
            android:layout_marginTop="40sp"
            style="?android:attr/borderlessButtonStyle"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/sign_in"
            android:textSize="24sp"
            />
    </RelativeLayout>

    <WebView
        android:id="@+id/webview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/title"
        android:visibility="gone"
        />
</RelativeLayout>
